--- a/Unit02/40461_Mod04_4.1.ipynb
+++ b/Unit02/40461_Mod04_4.1.ipynb
@@ -48,11 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0   1037      0 --:--:-- --:--:-- --:--:--  1696\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt\n"
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -99,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='poem1.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] run and review code to test if open worked \n",
     "# should display name='poem1.txt' and no errors\n",
@@ -126,27 +147,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0   1931      0 --:--:-- --:--:-- --:--:--  1931\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import cities.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities -o cities.txt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='cities.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] open cities.txt as cities_file\n",
     "# [ ] test cities.txt was opened \n",
-    "\n"
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities_file"
    ]
   },
   {
@@ -173,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -185,11 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I repeat\\nloops\\nloops\\nloops\\nI repeat\\nuntil I\\nbreak\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# shows the file as a string with formatting characters such as \"\\n\", output should be non-blank\n",
@@ -198,11 +252,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# since .read() loaded the file as a string it can be printed\n",
@@ -227,28 +296,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beijing\\nCairo\\nLondon\\nNairobi\\nNew York City\\nSydney\\nTokyo\\n'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] after import and open of cities.txt in task 1\n",
     "# [ ] read cities_file as cities\n",
     "# [ ] display the string: cities\n",
-    "\n"
+    "cities = cities_file.read()\n",
+    "cities\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the string: cities\n",
-    "\n"
+    "\n",
+    "print(cities)"
    ]
   },
   {
@@ -277,11 +374,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I re\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I re'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example to read poem1.txt 10 characters at a time\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -292,11 +407,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'peat\\nloops'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and displays without storing in a variable\n",
@@ -305,25 +431,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nloops\\nloo'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and stores in variable poem_parts\n",
     "poem_parts = poem_file.read(10)\n",
-    "print(poem_parts)"
+    "print(poem_parts)\n",
+    "poem_parts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loops\n",
+      "I \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] REPEATEDLY RUN this cell,  + 5 more characters each time run are appended using string addition\n",
     "# [ ]  consider why no additional text displays after multiple runs\n",
@@ -351,45 +509,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   303  100   303    0     0   1683      0 --:--:-- --:--:-- --:--:--  1683\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 1. import digits_of_pi.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi -o digits_of_pi.txt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 2. open as digits_of_pi_text \n",
     "# 3. read() 4 char of digits_of_pi_text to pi_digits variable \n",
     "# 4. print pi_digits  \n",
-    "\n"
+    "\n",
+    "digits_of_pi_text = open(\"digits_of_pi.txt\", \"r\")\n",
+    "\n",
+    "pi_digits = digits_of_pi_text.read(4)\n",
+    "\n",
+    "print(pi_digits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 5. add to pi_digits string with string addition  \n",
     "#   a. add next 4 characters from digits_of_pi obtained from read()  \n",
     "#   b. run the cell multiple times to get more digits of *pi*\n",
-    "\n"
+    "\n",
+    "pi_digits += digits_of_pi_text.read(4)\n",
+    "print(pi_digits)"
    ]
   },
   {
@@ -422,11 +613,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOOPS I REPEAT\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -436,11 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6).title()\n",
@@ -449,11 +658,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loops\n",
+      "\n",
+      "False isalpha() because of `\\n`\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'loops\\n'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6)\n",
@@ -464,11 +693,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repeat\n",
+      "loops\n",
+      "loops\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -493,24 +732,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beijing\\nCairo\\nLondon\\nNairobi\\nNew York City\\nSydney\\nTokyo\\n'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] complete the task\n",
+    "\n",
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities = cities_file.read()\n",
+    "cities \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "C\n",
+      "L\n",
+      "N\n",
+      "NYC\n",
+      "S\n",
+      "T\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial = \"\"\n",
+    "for city in cities:\n",
+    "    if city.isupper():\n",
+    "       initial += city\n",
+    "    elif city == \"\\n\":\n",
+    "        initial += city\n",
+    "    else:\n",
+    "        pass \n",
+    "\n",
+    "print(initial)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -539,7 +819,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
