--- a/Unit02/40461_Mod04_4.2.ipynb
+++ b/Unit02/40461_Mod04_4.2.ipynb
@@ -40,12 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0    240      0 --:--:-- --:--:-- --:--:--   259\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Run to download file to notebook\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt"
@@ -53,11 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Loops I repeat\\n',\n",
+       " 'loops\\n',\n",
+       " 'loops\\n',\n",
+       " 'loops\\n',\n",
+       " 'I repeat\\n',\n",
+       " 'until I\\n',\n",
+       " 'break\\n']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# open address to file\n",
@@ -70,11 +97,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "I repeat\n",
+      "\n",
+      "until I\n",
+      "\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for line in poem_lines:\n",
@@ -99,38 +147,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    56  100    56    0     0   1600      0 --:--:-- --:--:-- --:--:--  1600\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import cities\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities -o cities.txt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Beijing\\n',\n",
+       " 'Cairo\\n',\n",
+       " 'London\\n',\n",
+       " 'Nairobi\\n',\n",
+       " 'New York City\\n',\n",
+       " 'Sydney\\n',\n",
+       " 'Tokyo\\n']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] open cities.txt as cities_file and read the file as a list: cities_lines\n",
-    "\n"
+    "\n",
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities_lines = cities_file.readlines()\n",
+    "cities_lines "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "\n",
+      "Cairo\n",
+      "\n",
+      "London\n",
+      "\n",
+      "Nairobi\n",
+      "\n",
+      "New York City\n",
+      "\n",
+      "Sydney\n",
+      "\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use list iteration to print each city in cities_lines list\n",
-    "\n"
+    "\n",
+    "for ci in cities_lines:\n",
+    "    print(ci)"
    ]
   },
   {
@@ -166,11 +267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat\\n', 'loops\\n', 'loops\\n', 'loops\\n', 'I repeat\\n', 'until I\\n', 'break\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run examples\n",
     "# [ ] re-open file and read file as a list of strings\n",
@@ -181,11 +290,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "I repeat\n",
+      "\n",
+      "until I\n",
+      "\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item \n",
     "for line in poem_lines:\n",
@@ -194,11 +324,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat', 'loops', 'loops', 'loops', 'I repeat', 'until I', 'break']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] remove the last character of each list item, which is \"\\n\"\n",
     "count = 0\n",
@@ -212,11 +350,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item \n",
     "for line in poem_lines:\n",
@@ -236,36 +388,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Beijing\\n',\n",
+       " 'Cairo\\n',\n",
+       " 'London\\n',\n",
+       " 'Nairobi\\n',\n",
+       " 'New York City\\n',\n",
+       " 'Sydney\\n',\n",
+       " 'Tokyo\\n']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] re-open file and read file as a list of strings \n",
     "# [ ] open cities.txt as cities_file and read the file as a list: cities_lines\n",
-    "\n"
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities_lines = cities_file.readlines()\n",
+    "cities_lines\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Beijing', 'Cairo', 'London', 'Nairobi', 'New York City', 'Sydney', 'Tokyo']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] remove the last character, \"\\n\", of each cities_lines list item \n",
-    "\n"
+    "count = 0 \n",
+    "\n",
+    "for city in cities_lines:\n",
+    "    cities_lines[count] = city[:-1]\n",
+    "    count += 1\n",
+    "\n",
+    "print(cities_lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item in cities_lines\n",
     "for line in cities_lines:\n",
@@ -296,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -308,11 +507,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat\\n', 'loops\\n', 'loops\\n', 'loops\\n', 'I repeat\\n', 'until I\\n', 'break\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: readlines breaks if file is no longer open\n",
     "\n",
@@ -322,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -349,38 +556,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# [ ] open cities.txt as cities_file\n",
-    "\n"
+    "\n",
+    "cities_file = open(\"cities.txt\", \"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Beijing\\n',\n",
+       " 'Cairo\\n',\n",
+       " 'London\\n',\n",
+       " 'Nairobi\\n',\n",
+       " 'New York City\\n',\n",
+       " 'Sydney\\n',\n",
+       " 'Tokyo\\n']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] read the lines as cities_lines\n",
-    "\n"
+    "\n",
+    "cities_lines = cities_file.readlines()\n",
+    "cities_lines\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the cities that start with the letter \"D\" or greater\n",
-    "\n"
+    "cities = \"\"\n",
+    "count = 0 \n",
+    "\n",
+    "for city in cities_lines:\n",
+    "\n",
+    "    if city[0] >= \"D\":\n",
+    "        cities += city \n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "print(cities)"
    ]
   },
   {
@@ -397,14 +647,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# [ ] close cities_file\n",
-    "\n"
+    "\n",
+    "cities_file.close()"
    ]
   },
   {
@@ -424,62 +675,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100    57  100    57    0     0   1117      0 --:--:-- --:--:-- --:--:--  1096\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2.txt as poem2.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2.txt -o poem2.txt \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# [ ] open poem2.txt as poem2_text in read mode\n",
-    "\n"
+    "\n",
+    "poem2_text = open(\"poem2.txt\", \"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['while True\\n',\n",
+       " 'I loop\\n',\n",
+       " 'True\\n',\n",
+       " 'loop\\n',\n",
+       " 'True\\n',\n",
+       " 'loop\\n',\n",
+       " 'not True\\n',\n",
+       " 'False\\n',\n",
+       " 'end\\n']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] create a list of strings, called poem2_lines, from each line of poem2_text\n",
-    "\n"
+    "\n",
+    "poem2_lines = poem2_text.readlines()\n",
+    "poem2_lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['while True',\n",
+       " 'I loop',\n",
+       " 'True',\n",
+       " 'loop',\n",
+       " 'True',\n",
+       " 'loop',\n",
+       " 'not True',\n",
+       " 'False',\n",
+       " 'end']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] remove the newline character for each list item in poem2_lines\n",
-    "\n"
+    "\n",
+    "count = 0\n",
+    "\n",
+    "for text in poem2_lines:\n",
+    "    poem2_lines[count] = text[:-1]\n",
+    "    count += 1\n",
+    "\n",
+    "poem2_lines "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['end', 'False', 'not True', 'loop', 'True', 'loop', 'True', 'I loop', 'while True']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the poem2 lines in reverse order\n",
-    "\n"
+    "\n",
+    "poem2_lines.reverse()\n",
+    "\n",
+    "print(poem2_lines)"
    ]
   },
   {
@@ -509,7 +829,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
